# qt_base

./: CMakeLists.txt  README.md  hello_widgets.cc  hello_widgets.h  main.cc
qt_base/lib/: libQt5AccessibilitySupport.la  libQt5AccessibilitySupport.prl  libQt5Bootstrap.la  libQt5Bootstrap.prl  libQt5Concurrent.la  libQt5Concurrent.prl  libQt5Concurrent.so.5.9.9  libQt5Core.la  libQt5Core.prl  libQt5DBus.la  libQt5DBus.prl  libQt5DBus.so.5.9.9  libQt5DeviceDiscoverySupport.la  libQt5DeviceDiscoverySupport.prl  libQt5EglFSDeviceIntegration.la  libQt5EglFSDeviceIntegration.prl  libQt5EglFSDeviceIntegration.so.5.9.9  libQt5EglSupport.la  libQt5EglSupport.prl  libQt5EventDispatcherSupport.la  libQt5EventDispatcherSupport.prl  libQt5FbSupport.la  libQt5FbSupport.prl  libQt5FontDatabaseSupport.la  libQt5FontDatabaseSupport.prl  libQt5Gui.la  libQt5Gui.prl  libQt5InputSupport.la  libQt5InputSupport.prl  libQt5Network.la  libQt5Network.prl  libQt5Network.so.5.9.9  libQt5OpenGL.la  libQt5OpenGL.prl  libQt5OpenGL.so.5.9.9  libQt5OpenGLExtensions.la  libQt5OpenGLExtensions.prl  libQt5PlatformCompositorSupport.la  libQt5PlatformCompositorSupport.prl  libQt5PrintSupport.la  (+20 more)
qt_base/mkspecs/: qconfig.pri  qmodule.pri
qt_base_static/lib/: libQt5AccessibilitySupport.la  libQt5AccessibilitySupport.prl  libQt5Bootstrap.la  libQt5Bootstrap.prl  libQt5Concurrent.la  libQt5Concurrent.prl  libQt5Core.la  libQt5Core.prl  libQt5DBus.la  libQt5DBus.prl  libQt5DeviceDiscoverySupport.la  libQt5DeviceDiscoverySupport.prl  libQt5EglFSDeviceIntegration.la  libQt5EglFSDeviceIntegration.prl  (+38 more)
(+104 files in other folders)
